// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range Snap render Range -- props blockSize 1`] = `
<div
  class="at-range"
>
  <div
    class="at-range__container"
  >
    <div
      class="at-range__rail"
    />
    <div
      class="at-range__track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="at-range__slider"
      style="left: 0%;"
    />
    <div
      class="at-range__slider"
      style="left: 0%;"
    />
  </div>
</div>
`;

exports[`Range Snap render Range -- props className 1`] = `
<div
  class="at-range test"
>
  <div
    class="at-range__container"
  >
    <div
      class="at-range__rail"
    />
    <div
      class="at-range__track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="at-range__slider"
      style=""
    />
    <div
      class="at-range__slider"
      style=""
    />
  </div>
</div>
`;

exports[`Range Snap render Range -- props customStyle 1`] = `
<div
  class="at-range"
  style="color: red;"
>
  <div
    class="at-range__container"
  >
    <div
      class="at-range__rail"
    />
    <div
      class="at-range__track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="at-range__slider"
      style=""
    />
    <div
      class="at-range__slider"
      style=""
    />
  </div>
</div>
`;

exports[`Range Snap render Range -- props disabled 1`] = `
<div
  class="at-range at-range--disabled"
>
  <div
    class="at-range__container"
  >
    <div
      class="at-range__rail"
    />
    <div
      class="at-range__track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="at-range__slider"
      style=""
    />
    <div
      class="at-range__slider"
      style=""
    />
  </div>
</div>
`;

exports[`Range Snap render Range -- props max 1`] = `
<div
  class="at-range"
>
  <div
    class="at-range__container"
  >
    <div
      class="at-range__rail"
    />
    <div
      class="at-range__track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="at-range__slider"
      style=""
    />
    <div
      class="at-range__slider"
      style=""
    />
  </div>
</div>
`;

exports[`Range Snap render Range -- props min 1`] = `
<div
  class="at-range"
>
  <div
    class="at-range__container"
  >
    <div
      class="at-range__rail"
    />
    <div
      class="at-range__track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="at-range__slider"
      style=""
    />
    <div
      class="at-range__slider"
      style=""
    />
  </div>
</div>
`;

exports[`Range Snap render Range -- props railStyle 1`] = `
<div
  class="at-range"
>
  <div
    class="at-range__container"
  >
    <div
      class="at-range__rail"
      style="color: red;"
    />
    <div
      class="at-range__track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="at-range__slider"
      style=""
    />
    <div
      class="at-range__slider"
      style=""
    />
  </div>
</div>
`;

exports[`Range Snap render Range -- props sliderStyle 1`] = `
<div
  class="at-range"
>
  <div
    class="at-range__container"
  >
    <div
      class="at-range__rail"
    />
    <div
      class="at-range__track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="at-range__slider"
      style="color: red;"
    />
    <div
      class="at-range__slider"
      style="color: red;"
    />
  </div>
</div>
`;

exports[`Range Snap render Range -- props trackStyle 1`] = `
<div
  class="at-range"
>
  <div
    class="at-range__container"
  >
    <div
      class="at-range__rail"
      style="color: red;"
    />
    <div
      class="at-range__track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="at-range__slider"
      style=""
    />
    <div
      class="at-range__slider"
      style=""
    />
  </div>
</div>
`;

exports[`Range Snap render Range -- props value 1`] = `
<div
  class="at-range"
>
  <div
    class="at-range__container"
  >
    <div
      class="at-range__rail"
    />
    <div
      class="at-range__track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="at-range__slider"
      style=""
    />
    <div
      class="at-range__slider"
      style=""
    />
  </div>
</div>
`;

exports[`Range Snap render initial Range 1`] = `
<div
  class="at-range"
>
  <div
    class="at-range__container"
  >
    <div
      class="at-range__rail"
    />
    <div
      class="at-range__track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="at-range__slider"
      style=""
    />
    <div
      class="at-range__slider"
      style=""
    />
  </div>
</div>
`;
